# qvd-extract-reader

./: .gitignore  Cargo.toml  README.md  extract_qvd.db  pyproject.toml
src/: lib.rs  main.rs  qvd_structure.rs
