cargo-features = ["edition2024"]

[toolchain]
channel = "nightly"

[package]
name = "qvd_extract_reader"
version = "1.0.0"
authors = ["Janerose Njogu <janerose.njogu@eoncollective.com>"]
edition = "2024"
readme = "README.md"
description = "A library for reading data from QVD extract file. Written in Rust."
license = "Apache-2.0"
repository = "https://github.com/janerose-njogu/qvd-extract-reader"
keywords = ["extract", "qlikview", "qlik", "qliksense", "qvd"]

[[bin]]
name = "qvd_extract_reader_bin"  # Renaming the binary target
path = "src/main.rs"

[lib]
name = "qvd_extract_reader"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
quick-xml = { version = "0.20.0", features = ["serialize"]}
bitvec = "0.19.4"
csv = "1.1"
libduckdb-sys = "1.0.0"
duckdb = { version = "1.0.0", features = ["bundled"] }
regex = "1"
byteorder = "1.5.0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

