[toolchain]
channel = "nightly"

[package]
name = "qvd-extract-reader"
version = "0.1.0"
authors = ["Janerose Njogu <janerose.njogu@eoncollective.com>"]
edition = "2024"
readme = "README.md"
description = "A library for reading data from QVD extract file. Written in Rust."
license = "Apache-2.0"
repository = "https://github.com/janerose-njogu/qvd-extract-reader"
keywords = ["extract", "qlikview", "qlik", "qliksense", "qvd"]

[lib]
name = "qvd_extract_reader"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.2", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0.117", features = ["derive"] }
quick-xml = { version = "0.37.1", features = ["serialize"]}
bitvec = "0.19.4"
csv = "1.1"
libduckdb-sys = "1.0.0"
duckdb = { version = "1.0.0", features = ["bundled"] }
regex = "1"
byteorder = "1.5.0"
memmap2 = "0.9.5"
